k8s/overlays/local/redis/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-local
  labels:
    istio-injection: enabled
